                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 20-02-2006 added: Window.IsMedia conditional visibility.
 - 20-02-2006 added: some minor tweaks to party mode:  When first enabled, window switches to Now Playing window.
			Better checking for the "Move" options in the Now Playing context menu since Party Mode takes over.
			Added "Cancel Party Mode" option to Now Playing context menu.
 - 20-02-2006 fixed: Replaygain settings weren't being applied.
 - 20-02-2006 fixed: Musicoverlay visibility on Control.HasFocus() wasn't working.
 - 20-02-2006 changed: If no thumb is available, ListItem.Thumb uses the icon image.
 - 20-02-2006 added: Analog scrolling (triggers) to the button scroller.
 - 20-02-2006 fixed: Various initial control focus issues.
 - 20-02-2006 changed: Redid the Trainers dialog to use the DialogSettings base class.
 - 20-02-2006 fixed: Possible buffer overruns in setting and getting trainers settings from the database.
 - 19-02-2006 added: Initial support for Music Party Mode.  Enable it from the Library view as it requires the database.
 - 19-02-2006 changed: Refactored the window open and window close processes.
 - 18-02-2006 changed: "Delete" and "Rename" in the context menu are only enabled if the share supports them
 - 18-02-2006 changed: iTunes playlists now adhere to the "shuffle playlists on load" option if you use PLAY on them
 - 18-02-2006 changed: Keyboard updates all buttons with the same id when you change from Symbols -> Caps -> Lower case.
 - 18-02-2006 fixed: Video Calibration activated via the video OSD wasn't working.
 - 18-02-2006 fixed: Possible crashes in charset conversion.