@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 20-02-2006 changed: SET_FOCUS now focuses the first focusable control with the given id (or attempts to focus the first non-focusable control with the given id if that fails).
  - 20-02-2006 added: Window.IsMedia conditional visibility.
  - 20-02-2006 added: some minor tweaks to party mode:  When first enabled, window switches to Now Playing window.
 			Better checking for the "Move" options in the Now Playing context menu since Party Mode takes over.
